--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+
+    <script src="https://kit.fontawesome.com/3e2032f4ae.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
@@ -13,6 +15,13 @@
         CARAVAN
        </a>
       </h1>
+
+      <div class="social">
+
+       <i class="fa-brands fa-square-facebook"></i>
+       <i class="fa-brands fa-square-twitter"></i>
+       <i class="fa-brands fa-instagram"></i>
+      </div>
     </header>
 
 　　<nav>
